syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.gonitro.envoy.shimrpc";
option java_outer_classname = "ShimRpcProto";

package shimrpc;

service Registrar {
  rpc Register (RegistrarRequest) returns (RegistrarReply) {}
}

// The requested listener and cluster member
message RegistrarRequest {
  string frontend_addr = 1;
  int32  frontend_port = 2;
  string backend_addr = 3;
  int32  backend_port = 4;

  enum Action {
  	REGISTER = 0;
	DEREGISTER = 1;
  }

  Action action = 5;

  string environment_name = 6;
  string service_name = 7;
  string proxy_mode = 8;
}

// The response message containing the status
message RegistrarReply {
  int32 status_code = 1;
}
